// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for actions-devrev-test destination: streamEvent action - all fields 1`] = `
Object {
  "event_list": Array [
    Object {
      "name": "SdZcfcHDX",
      "payload": Object {
        "devOrgId": "SdZcfcHDX",
        "email": "zetonja@zedud.cw",
        "eventName": "SdZcfcHDX",
        "occurredAt": "2021-02-01T00:00:00.000Z",
        "properties": Object {
          "testType": "SdZcfcHDX",
        },
        "userId": "SdZcfcHDX",
      },
    },
  ],
}
`;

exports[`Testing snapshot for actions-devrev-test destination: streamEvent action - required fields 1`] = `
Object {
  "event_list": Array [
    Object {
      "name": "SdZcfcHDX",
      "payload": Object {
        "devOrgId": "SdZcfcHDX",
        "eventName": "SdZcfcHDX",
        "occurredAt": "2021-02-01T00:00:00.000Z",
        "userId": "SdZcfcHDX",
      },
    },
  ],
}
`;
